--- a/app/views/purchases/_index.html.erb
+++ b/app/views/purchases/_index.html.erb
@@ -1,9 +1,9 @@
   <div class="content">
 
     <div class="sm:flex-auto">
-        <h1 class="text-2xl font-semibold text-gray-900">Órdenes de Compra</h1>
+        <h1 class="text-2xl font-semibold text-gray-900">Purchase Orders</h1>
         <p class="mt-2 text-sm text-gray-700">
-          Total de órdenes: <%= @purchases.count %>
+          Total orders: <%= @purchases.count %>
         </p>
     </div>
     <div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none mb-3">
