--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,8 +1,8 @@
 <%= turbo_frame_tag :product do %>
   <div class="content">
     <%= render 'form', 
-        title: 'Editar Producto',
-        submit_text: 'Actualizar Producto',
-        submit_message: 'Actualizar producto.' %>
+        title: 'Edit Product',
+        submit_text: 'Update Product',
+        submit_message: 'Update product.' %>
   </div>
 <% end %>
