--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,8 +1,8 @@
 <%= turbo_frame_tag :product do %>
   <div class="content">
     <%= render 'form', 
-        title: 'Nuevo Producto',
-        submit_text: 'Crear Producto',
-        submit_message: 'Crear nuevo producto.' %>
+        title: 'New Product',
+        submit_text: 'Create Product',
+        submit_message: 'Create new product.' %>
   </div>
 <% end %>
