--- a/app/views/purchases/_form.html.erb
+++ b/app/views/purchases/_form.html.erb
@@ -180,7 +180,7 @@
       <% if @purchase.new_record? %>
         <%= f.button :submit, "Create Purchase", class: "btn btn-sm btn-primary me-2 rounded" %>
       <% else %>
-        <%= f.button :submit, "Update", class: "btn btn-sm btn-primary me-2 rounded" %>
+        <%= f.button :submit, "Update Purchase", class: "btn btn-sm btn-primary me-2 rounded" %>
       <% end %>
     </div>
   <% end %>
