--- a/app/views/sales/edit.html.erb
+++ b/app/views/sales/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="content">
     <div class="card">
       <div class="card-header">
-        <h2>Editar Venta</h2>
+        <h2>Edit Sale</h2>
       </div>
       <div class="card-body">
         <%= render 'form', sale: @sale %>
