--- a/app/views/customers/edit.html.erb
+++ b/app/views/customers/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="content">
     <div class="card">
       <div class="card-header">
-        <h2>Editar Cliente</h2>
+        <h2>Edit Customer</h2>
       </div>
       <div class="card-body">
         <%= render 'form', customer: @customer %>
