--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -2,9 +2,9 @@
 <%= turbo_frame_tag :customer do %>
   <div class="content">
     <div class="sm:flex-auto">
-        <h1 class="text-2xl font-semibold text-gray-900">Clientes</h1>
+        <h1 class="text-2xl font-semibold text-gray-900">Customers</h1>
         <p class="mt-2 text-sm text-gray-700">
-          Total de clientes: <%= @customers.count %>
+          Total of customers: <%= @customers.count %>
         </p>
     </div>
     <div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none mb-3">
