--- a/app/views/purchases/new.html.erb
+++ b/app/views/purchases/new.html.erb
@@ -2,7 +2,7 @@
 <div class="content">
   <div class="card">
     <div class="card-header">
-      <h2>Nueva Compra</h2>
+      <h2>New Purchase</h2>
     </div>
     <div class="card-body">
       <%= render 'form', purchase: @purchase %>
