--- a/app/views/suppliers/index.html.erb
+++ b/app/views/suppliers/index.html.erb
@@ -2,9 +2,9 @@
 <%= turbo_frame_tag :supplier do %>
   <div class="content">
     <div class="sm:flex-auto">
-      <h1 class="text-2xl font-semibold text-gray-900">Proveedores</h1>
+      <h1 class="text-2xl font-semibold text-gray-900">Suppliers</h1>
       <p class="mt-2 text-sm text-gray-700">
-        Total de proveedores: <%= @suppliers.count %>
+        Total of suppliers: <%= @suppliers.count %>
       </p>
     </div>
     <div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none mb-3">
