--- a/app/views/suppliers/new.html.erb
+++ b/app/views/suppliers/new.html.erb
@@ -1,8 +1,8 @@
 <%= turbo_frame_tag :supplier do %>
   <div class="content">
     <%= render 'form', 
-        title: 'Nuevo Proveedor',
-        submit_text: 'Crear Proveedor',
-        submit_message: 'Crear nuevo proveedor.' %>
+        title: 'New Supplier',
+        submit_text: 'Create Supplier',
+        submit_message: 'Create new supplier.' %>
   </div>
 <% end %>
