--- a/app/views/uploads/index.html.erb
+++ b/app/views/uploads/index.html.erb
@@ -3,7 +3,7 @@
   <div class="sm:flex-auto">
         <h1 class="text-2xl font-semibold text-gray-900">Invoices</h1>
         <p class="mt-2 text-sm text-gray-700">
-          Total de facturas: <%= @uploads.count %>
+          Total of invoices: <%= @uploads.count %>
         </p>
   </div>
 
