--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -10,7 +10,7 @@
     <div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none mb-3">
         <%= link_to new_customer_path,
                     class: "btn btn-sm btn-primary mb-3 mr-3 rounded" do %>
-          <i class="fas fa-plus mr-2"></i>New Client
+          <i class="fas fa-plus mr-2"></i>New Customer
         <% end %>
 
         <%= link_to customers_path(format: :xlsx),
