--- a/app/views/employees/edit.html.erb
+++ b/app/views/employees/edit.html.erb
@@ -3,7 +3,7 @@
     <div class="max-w-3xl mx-auto">
       <div class="bg-white shadow sm:rounded-lg">
         <div class="px-4 py-5 sm:p-6">
-          <h1 class="text-2xl font-bold mb-6">Editar Empleado</h1>
+          <h1 class="text-2xl font-bold mb-6">Edit Employee</h1>
           <%= render 'form' %>
         </div>
       </div>
