--- a/app/views/suppliers/edit.html.erb
+++ b/app/views/suppliers/edit.html.erb
@@ -1,8 +1,8 @@
 <%= turbo_frame_tag :supplier do %>
   <div class="content">
     <%= render 'form', 
-        title: 'Editar Proveedor',
-        submit_text: 'Actualizar Proveedor',
-        submit_message: 'Actualizar proveedor.' %>
+        title: 'Edit Supplier',
+        submit_text: 'Update Supplier',
+        submit_message: 'Update supplier.' %>
   </div>
 <% end %>
