purchase modal with changes vfinal

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -445,7 +445,7 @@
                   </a>
                 </div>
                 <div class="col-6 text-center">
-                  <a href="<%= new_purchase_path %>" class="action-link" data-bs-dismiss="modal" data-bs-toggle="modal" data-bs-target="#newPurchaseModal">
+                  <a href="<%= new_purchase_path %>" class="action-link" data-bs-dismiss="modal" data-bs-toggle="modal" data-bs-target="#newSalesModal">
                   <a href="<%= new_sales_upload_path %>" class="action-link">
                     <div class="action-block">
                       <i class="fas fa-file-invoice-dollar action-icon"></i>
@@ -453,17 +453,6 @@
                     </div>
                   </a>
                 </div>
-                <!-- Puedes quitar o comentar este bloque si ya no lo necesitas -->
-                <!--
-                <div class="col-6 text-center">
-                  <a href="<%= new_sales_upload_path %>" class="action-link">
-                    <div class="action-block">
-                      <i class="fas fa-file-invoice action-icon"></i>
-                      <div class="action-title">New Sales Invoice</div>
-                    </div>
-                  </a>
-                </div>
-                -->
               </div>
             </div>
           </div>
