--- a/app/views/uploads/_form.html.erb
+++ b/app/views/uploads/_form.html.erb
@@ -44,7 +44,7 @@
 
       <!-- Botón de subir -->
       <div class="d-flex justify-content-center mt-3">
-        <button type="submit" class="btn btn-primary rounded hidden" data-upload-target="submitButton">
+        <button type="button" class="btn btn-primary rounded hidden" data-upload-target="submitButton" onclick="submitFormAndRedirect()">
           Upload Image
         </button>
       </div>
