--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -59,12 +59,12 @@
                 (Min: <%= product.min_stock %>)
               </small>
             </td>
-            <td>
-              <%= link_to product_path(product), class: 'btn btn-info rounded' do %>
+            <td class="d-flex gap-2">
+              <%= link_to product_path(product), class: 'btn btn-sm btn-info rounded' do %>
                 <i class="fas fa-eye"></i>
               <% end %>
               <% if policy(product).edit? %>
-                <%= link_to edit_product_path(product), class: 'btn btn-warning rounded' do %>
+                <%= link_to edit_product_path(product), class: 'btn btn-sm btn-warning rounded' do %>
                   <i class="fas fa-edit"></i>
                 <% end %>
               <% end %>
