--- a/app/views/purchases/_form.html.erb
+++ b/app/views/purchases/_form.html.erb
@@ -72,7 +72,7 @@
                 class="border border-gray-300 p-1.5 rounded-sm"
                 style="width: 200px;">
           <option value="">Select category</option>
-          <% Product.distinct.pluck(:category).each do |category| %>
+          <% current_company.products.distinct.pluck(:category).each do |category| %>
             <option value="<%= category %>"><%= category %></option>
           <% end %>
         </select>
